[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://StateMachines/PlayerFSM.gd" type="Script" id=2]
[ext_resource path="res://Art/Character Sprites/sPlayer_idle-Sheet.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Running_Steps.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.38662, 3.76347 )

[sub_resource type="Animation" id=2]
resource_name = "dash"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=3]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 1, 2, 2 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6 ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )
Running_Steps = ExtResource( 4 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 11

[node name="StateLabel" type="Label" parent="."]
margin_left = -20.25
margin_top = -24.25
margin_right = 19.75
margin_bottom = -10.25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.446457, 6.24803 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dash = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/run = SubResource( 4 )

[node name="Tweens" type="Node" parent="."]

[node name="DashTween" type="Tween" parent="Tweens"]

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.017

[node name="ParticlePoint" type="Position2D" parent="."]
position = Vector2( -3.32363, 7.09371 )
[connection signal="dash_finished" from="." to="StateMachine" method="_on_Player_dash_finished"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
